otel-demo/base/patches/rollout-frontend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
  labels:
    helm.sh/chart: opentelemetry-demo-0.40.7
    opentelemetry.io/name: frontend
    app.kubernetes.io/version: "2.2.0"
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: opentelemetry-demo
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      opentelemetry.io/name: frontend
  strategy:
    blueGreen:
      activeService: frontend
      previewService: frontend-preview
      autoPromotionEnabled: false
      prePromotionAnalysis:
        templates:
          - templateName: http-success-rate
        args:
          - name: service-name
            value: frontend
          - name: namespace
            value: otel-demo
  template:
    metadata:
      labels:
        opentelemetry.io/name: frontend
        app.kubernetes.io/version: "2.2.0"
        app.kubernetes.io/component: frontend
        app.kubernetes.io/name: frontend
      annotations:
        resource.opentelemetry.io/service.namespace: otel-demo
        demo.otel/release-note: notification-test-2
    spec:
      serviceAccountName: otel-demo
      containers:
        - name: frontend
          image: 'ghcr.io/open-telemetry/demo:2.2.0-frontend'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: service
          resources:
            limits:
              memory: 250Mi
          securityContext:
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
          volumeMounts:
      volumes:
