otel-demo/base/patches/service-frontend-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-preview
  labels:
    opentelemetry.io/name: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: tcp-service
      targetPort: 8080
  selector:
    opentelemetry.io/name: frontend
